--- a/html/about.html
+++ b/html/about.html
@@ -22,7 +22,7 @@
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="msapplication-TileImage" content="../favicon/ms-icon-144x144.png" />
     <meta name="theme-color" content="#ffffff" />
-    <title>News Grid | About</title>
+    <title>Hot News | About</title>
     <script src="https://kit.fontawesome.com/eaa4609b2f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css" />
 </head>
@@ -37,7 +37,7 @@
         <div class="container">
             <div class="logo">
                 <i class="fas fa-globe fa-3x"></i>
-                <h1>News<span>Grid</span></h1>
+                <h1>Hot<span>News</span></h1>
             </div>
 
             <div class="social">
