--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <p class="entertainment-category">Entertainment</p>
                         <h1>Class 2024.</h1>
                         <p>
-                            Thank you for your unwavering support unwavering support from elementary through college. Your encouragement and guidance have been invaluable, and I couldn't have reached this milestone without you. I am deeply grateful for everything you've done. Here's to celebrating this achievement together!
+                            Thank you for your unwavering support from elementary through college. Your encouragement and guidance have been invaluable, and I couldn't have reached this milestone without you. I am deeply grateful for everything you've done. Here's to celebrating this achievement together!
                         </p>
                     </article>
                 </a>
