--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <a href="./html/article.html" class="card">
                     <article>
                         <p class="sports-category">My Journey</p>
-                        <h1>as a BSIT Student</h1>
+                        <h1>as a Student</h1>
                         <p>
                             As a BSIT student, my journey is a blend of challenging projects, teamwork, and mentorship. Each day, I tackle deadlines that teach me discipline and readiness for the tech industry. Collaborating on group projects has honed my communication skills and problem-solving abilities, while my professors' guidance has shaped my understanding of new technologies and professional growth. This experience has not only deepened my appreciation for education but also prepared me for the dynamic world of Information Technology.
                         </p>
