--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <p class="sports-category">My Journey</p>
                         <h1>as a Student</h1>
                         <p>
-                            As a BSIT student, my journey is a blend of challenging projects, teamwork, and mentorship. Each day, I tackle deadlines that teach me discipline and readiness for the tech industry. Collaborating on group projects has honed my communication skills and problem-solving abilities, while my professors' guidance has shaped my understanding of new technologies and professional growth. This experience has not only deepened my appreciation for education but also prepared me for the dynamic world of Information Technology.
+                            As a BSIT student, my journey has been a blend of challenging projects, teamwork, and invaluable mentorship. Every day, I meet deadlines that teach me discipline and prepare me for the tech industry. Collaborating on group projects has sharpened my communication skills and problem-solving abilities. The guidance from my professors has been instrumental in shaping my understanding of new technologies and fostering my professional growth. This experience has deepened my appreciation for education and equipped me for the dynamic world of Information Technology.
                         </p>
                     </article>
                 </a>
