--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ Dr. Rudy Jaravata helped me get my first Driver's License, which is my first val
                 <a href="./html/article.html" class="card">
                     <article>
                         <p>
-                            I am deeply grateful to Dr. Rudy Jaravata for his generous support and guidance. His gift of a laptop and cellphone has significantly enhanced my educational journey in BSIT. His continuous encouragement to strive for excellence in all aspects of life has been invaluable. Dr. Jaravata's advice to 'study hard to improve your life' serves as a constant motivation for me to work diligently and persevere. I truly appreciate his kindness and mentorship, which have positively impacted my growth and development.
+                            I am deeply grateful to Dr. Rudy Jaravata for his generous support and guidance. His contributions have significantly enhanced my educational journey in BSIT. His continuous encouragement to strive for excellence in all aspects of life has been invaluable. Dr. Jaravata's advice to 'study hard to improve your life' serves as a constant motivation for me to work diligently and persevere. I truly appreciate his kindness and mentorship, which have positively impacted my growth and development.
                         </p>
                     </article>
                 </a>
@@ -136,8 +136,7 @@ Dr. Rudy Jaravata helped me get my first Driver's License, which is my first val
                         <p class="entertainment-category">Entertainment</p>
                         <h1>Special Day.</h1>
                         <p>
-                            As I celebrate my graduation, I reflect on the profound influence of Dr. Jaravata's support. His belief in my potential and his unwavering assistance have been instrumental in my academic success. With sincere gratitude, I thank him for his invaluable contributions to my journey, shaping me into the person I am today.
-                        </p>
+                            As I celebrate my graduation and new beginning as an Associate Software Engineer at Accenture, I want to express my heartfelt gratitude to Dr. Jaravata. His belief in my abilities and unwavering support have been crucial to my academic success and professional development. Thanks to his guidance, I gained the confidence and skills needed to achieve the position of "Packaged App Development Associate" at Accenture. Thank you so much, Dr. Jaravata, for your invaluable contribution to my journey.
                     </article>
                     <img src="./images/articles/ent2.jpg" alt="" />
                 </a>
